--- a/src/assets/js/plugins/core/pages/general/index.scss
+++ b/src/assets/js/plugins/core/pages/general/index.scss
@@ -21,13 +21,44 @@
 			height: 254px;
 			overflow: hidden;
 			border-radius: 8px;
-			filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.5));
+			box-shadow: 0 4px 8px 0 #0007;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			background: #000;
 			position: relative;
 			transition: .2s;
+			&__overlay {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background: linear-gradient(#fff7, #0007);
+				-webkit-text-stroke: 0.5px #000;
+				display: flex;
+				color: #fff;
+				align-items: center;
+				justify-content: center;
+				box-shadow: inset 0 0 0 3px #ffffff85;
+				border-radius: 8px;
+				text-align: center;
+				padding: 8px;
+				box-sizing: border-box;
+				user-select: none;
+				transition: .2s;
+			}
+			&__title {
+				&Local {
+					margin: 0;
+					max-height: 70px;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
+				&Original {
+					font-size: small;
+					opacity: 0.5;
+					-webkit-text-stroke: initial;
+				}
+			}
 			img {
 				width: 100%;
 			}
@@ -38,8 +69,20 @@
 			}
 			&:not(.not-found) {
 				cursor: pointer;
+				.poster__overlay {
+					opacity: 0;
+				}
 				&:hover {
 					transform: scale(1.2);
+					box-shadow: 0 0 2px 0 #0007;
+				}
+			}
+			&--flipped:not(.not-found):hover {
+				img {
+					filter: blur(16px);
+				}
+				.poster__overlay {
+					opacity: 1;
 				}
 			}
 		}
