--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -144,7 +144,17 @@ main {
 	overflow: auto;
 }
 
-.page {}
+.page {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background: #fff;
+	&--hidden {
+		display: none !important;
+	}
+}
 
 .root_footer {
 	box-sizing: border-box;
