quite big refactor

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,174 +1,8 @@
 @import url('fonts/Open Sans/stylesheet.css');
 @import url('fonts/Material-Icons/stylesheet.css');
 
-body, .body {
-	margin: 0;
-	height: var(--window-height);
-	overflow: hidden;
-	position: relative;
-}
-
-.body {
-	font-family: "Open Sans", sans-serif;
-}
-
-.header {
-	--header-background-color: 0, 0, 0;
-	--header-background-opacity: 0.5;
-	--header-icon-color: 255, 255, 255;
-	--header-icon-hightlight-color: 255, 255, 255;
-	--header-icon-hightlight-intensity: 0.2;
-	--header-background-hightlight-intensity: 0.6;
-	--header-width: 50px;
-	--header-window-width: 300px;
-	--header-window-text-color: var(--header-icon-color);
-	& {
-		display: inline-flex;
-		height: 100%;
-		overflow-x: hidden;
-		width: var(--header-width);
-		position: absolute;
-		flex-direction: column;
-		z-index: 999;
-		transition: .2s width;
-	}
-	&--expand {
-		&:not(.header--horizontal) {
-			width: calc(var(--header-width) + var(--header-window-width))!important;
-		}
-	}
-	&--horizontal {
-		height: 50px;
-		width: 100%;
-		flex-direction: row;
-		overflow-x: auto;
-		overflow-y: hidden;
-		.header__left, .header__right {
-			flex-direction: row;
-			width: auto;
-			height: var(--header-width);
-		}
-		&.header--expand {
-			height: calc(var(--header-width) + var(--header-window-width))!important;
-		}
-		.windows {
-			left: 0!important;
-			top: var(--header-width);
-			width: 100%!important;
-			height: var(--header-window-width)!important;
-		}
-	}
-	&__left, &__right {
-		display: flex;
-		width: var(--header-width);
-		flex-direction: column;
-		button {
-			--x: 25px;
-			--y: 25px;
-			background: transparent;
-			position: relative;
-			border: none;
-			// outline: none;
-			width: 50px;
-			height: 50px;
-			overflow: hidden;
-			transition: .2s;
-			font-family: 'Material Icons', sans-serif;
-			color: rgb(var(--header-icon-color));
-			font-size: 24px;
-			cursor: pointer;
-			box-shadow: inset 0 0 0 0 rgba(var(--header-icon-hightlight-color), var(--header-icon-hightlight-intensity));
-			&:before {
-				opacity: 0;
-				top: var(--y);
-				left: var(--x);
-				border-radius: 100%;
-				width: .1px;
-				height: .1px;
-				content: '';
-				position: absolute;
-				box-shadow: 0 0 30px 20px rgba(var(--header-icon-hightlight-color), var(--header-background-hightlight-intensity));
-				transition: .2s opacity;
-			}
-			&:hover {
-				box-shadow: inset 0 0 0 2px rgba(var(--header-icon-hightlight-color), var(--header-icon-hightlight-intensity));
-			}
-			&:hover:before {
-				opacity: 1;
-			}
-		}
-	}
-	&__left {
-		flex: 1;
-	}
-	.windows {
-		& {
-			position: absolute;
-			color: rgb(var(--header-window-text-color));
-			left: var(--header-width);
-			width: var(--header-window-width);
-			height: 100%;
-		}
-		.window {
-			padding: 16px;
-		}
-	}
-	&::after {
-		content: '';
-		background-color: rgba(var(--header-background-color), var(--header-background-opacity));
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		z-index: -1;
-		backdrop-filter: blur(8px);
-	}
-	&::-webkit-scrollbar {
-		& {
-			width: 5px;
-			height: 5px;
-		}
-
-		&-thumb {
-			background-color: rgb(var(--header-icon-color));
-		}
-
-		&, &-corner {
-			background-color: rgba(var(--header-background-color), var(--header-background-opacity));
-		}
-	}
-}
-
-main {
-	width: 100%;
-	height: 100%;
-	position: relative;
-	overflow: auto;
-}
-
-.page {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background: #fff;
-	&--hidden {
-		display: none !important;
-	}
-}
-
-.root_footer {
-	box-sizing: border-box;
-	background-color: #000;
-	color: #fff;
-	text-align: right;
-	font-size: 10px;
-	font-family: 'Roboto', sans-serif;
-	padding: 1px 4px;
-	height: 12px;
-	display: flex;
-	align-items: center;
-	&__info_block {
-		flex: 1;
-	}
-}
+@import "shared";
+@import "header";
+@import "panels";
+@import "windows";
+@import "footer";
